[package]
name = "buklo"
version = "0.1.11"
description = "Buklo is a simple CLI HTTP client"
keywords = ["cli", "http"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ghishadow/buklo"
documentation = "https://docs.rs/crate/buklo"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
argh = "0.1"
ureq = { version = "2.5", default-features = false, features = [
    "gzip",
    "json",
    "socks-proxy",
    "native-certs",
] }
update-informer = "0.5"
owo-colors = "3.5"
url = "2.3"
mimalloc = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["tracing", "macros", "rt-multi-thread"] }

[dev-dependencies]


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"     # Optimize for size
strip = "debuginfo"
panic = "abort"
