[package]
name = "buklo"
version = "0.1.11"
description = "Buklo is a simple CLI HTTP client"
keywords = ["cli", "http"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ghishadow/buklo"
documentation = "https://docs.rs/crate/buklo"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
argh = "0.1"
ureq = { version = "2.6", default-features = false, features = [
    "gzip",
    "json",
    "socks-proxy",
    "native-certs",
    "native-tls",
] }
update-informer = "1.0"
owo-colors = "3.5"
url = "2.3"
snmalloc-rs = "0.3"
spinoff = { version = "0.7", features = ["dots", "arc", "line"] }
tracing = "0.1"
tokio = { version = "1", features = ["tracing", "macros", "rt-multi-thread"] }

[patch.crates-io]
ring = { git = "https://github.com/1Password/ring", branch = "1p/0.16" }



[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"     # Optimize for size
strip = "debuginfo"
panic = "abort"
