
[package]
name = "buklo"
version = "0.1.14"
description = "Buklo is a simple CLI HTTP client"
keywords = ["cli", "http", "https"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ghishadow/buklo"
documentation = "https://docs.rs/crate/buklo"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
unsafe_code = "forbid"

[dependencies]
argh = "0.1"
ureq = { version = "2.12", default-features = false, features = [
    "gzip",
    "json",
    "socks-proxy",
    "native-certs",
    "native-tls",
] }
update-informer = "1.2"
owo-colors = "4.1"
url = "2.5"
tracing = "0.1"
tokio = { version = "1", features = ["tracing", "macros", "rt-multi-thread"] }


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "debuginfo"
panic = "abort"
